@@ -1,5 +1,8 @@
 # nslu2_config
 
+# Makefile macros
+CROSS_COMPILE=/usr/armv5b-softfloat-linux/gcc-3.4.2-glibc-2.3.3/bin/armv5b-softfloat-linux-
+
 CONFIG_ARCH=arm
 CONFIG_MACH=ixp42x
 CONFIG_BIGENDIAN=y
